--- a/views/farms/show.ejs
+++ b/views/farms/show.ejs
@@ -13,7 +13,7 @@
         <li>City: <%= farm.city%></li>
         <li>Email: <%= farm.email %></li>
     </ul>
-
+<a href="/farms/<%= farm._id %>/products/new">Add new Product to your farm</a>
 </body>
 
 </html>
